[gd_scene load_steps=3 format=3 uid="uid://c2jhyiaal56e"]

[ext_resource type="Script" path="res://Scenes/Level Selector/scripts/level_select.gd" id="1_twx0p"]
[ext_resource type="Texture2D" uid="uid://b0hy18sh03c3u" path="res://Scenes/Level Selector/Images/fundo.png" id="2_djvii"]

[node name="Level Select" type="Node2D"]
script = ExtResource("1_twx0p")

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_djvii")

[node name="Lvl_1" type="Button" parent="Map"]
offset_left = -806.0
offset_top = 144.0
offset_right = -747.0
offset_bottom = 175.0
scale = Vector2(2.68, 2.68)
text = "FASE 1"
metadata/_edit_use_anchors_ = true

[node name="Level_desc" type="Sprite2D" parent="."]
modulate = Color(0.916529, 0.478794, 0.69773, 1)
position = Vector2(945, 489)
scale = Vector2(0.28, 0.28)
texture = ExtResource("2_djvii")

[node name="Label" type="Label" parent="Level_desc"]
offset_left = -800.0
offset_top = -375.0
offset_right = -420.0
offset_bottom = -218.0
scale = Vector2(4.14287, 4.14287)
text = "TEST"
autowrap_mode = 1

[node name="Play" type="Button" parent="Level_desc"]
offset_left = -121.429
offset_top = 328.571
offset_right = -62.4286
offset_bottom = 359.571
scale = Vector2(5.82285, 5.82285)
text = "PLAY"
metadata/_edit_use_anchors_ = true

[node name="Close" type="Button" parent="Level_desc"]
offset_left = 839.286
offset_top = -532.143
offset_right = 857.286
offset_bottom = -501.143
scale = Vector2(6.30548, 6.30548)
text = "X"

[connection signal="pressed" from="Map/Lvl_1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Level_desc/Close" to="." method="_on_close_pressed"]
